Fix $spacing variables (`.75` is not a sixth!), add a `$spacing.px` for edge cases:
- Use `$spacing.quarter * 3` if you need `.75rem` :)

--- a/source/stylus/modules/variables/grid.styl
+++ b/source/stylus/modules/variables/grid.styl
@@ -43,10 +43,10 @@ $spacing = {
   three: $default-spacing-pp,
   two: $default-spacing-p,
   one: $default-spacing-m,
-  half: $default-spacing-mmm,
-  quarter: $default-spacing-mmmm,
-  sixth: $default-spacing-mm,
-  micro: $default-spacing-mmmmm,
+  half: $default-spacing-mm,
+  quarter: $default-spacing-mmm,
+  micro: $default-spacing-mmmm,
+  px: $default-spacing-mmmmm
 }
 
 // Borders =====================================================================
