--- a/source/stylus/partials/blockquotes.styl
+++ b/source/stylus/partials/blockquotes.styl
@@ -4,7 +4,7 @@ blockquote
   font-style: italic
   margin-left: $spacing.base
   padding-left: $spacing.base
-  border-left: $spacing.sixth solid $color.b
+  border-left: ($spacing.quarter * 3) solid $color.b
 
   p
     margin: 0
